--- a/skirmish.css
+++ b/skirmish.css
@@ -1,6 +1,18 @@
 
-.Blob div:hover {
+.Blob:hover {
     border: 1px solid #000000;
+}
+
+.Blob {
+    border-radius: 50%;
+}
+
+.BlobBlue {
+    background: #0000FF;
+}
+
+.BlobRed {
+    background: #ff0000;
 }
 
 
@@ -8,29 +20,23 @@
 #BlobRed1 {
 height: 20px;
 width: 20px;
-border-radius: 50%;
 position: absolute;
 top: 4%;
 left: 3%;
-background: #ff0000;
 }
 
 #BlobRed2 {
 height: 20px;
 width: 20px;
-border-radius: 50%;
 position: absolute;
 top: 7%;
 left: 3%;
-background: #ff0000;
 }
 
 #BlobBlue1 {
 height: 20px;
 width: 20px;
-border-radius: 50%;
 position: absolute;
 bottom: 4%;
 right: 3%;
-background: #0000FF;
 }
