Added a (test) SpawnBlob function, spawned at set location, by button, for now. Added a Selected state for blobs, added a message about not being able to Use IE9 or below due to a function I started using.

--- a/skirmish.css
+++ b/skirmish.css
@@ -16,27 +16,34 @@
 }
 
 
-
 #BlobRed1 {
-height: 20px;
-width: 20px;
-position: absolute;
-top: 4%;
-left: 3%;
+    height: 20px;
+    width: 20px;
+    position: absolute;
+    top: 4%;
+    left: 3%;
 }
 
 #BlobRed2 {
-height: 20px;
-width: 20px;
-position: absolute;
-top: 7%;
-left: 3%;
+    height: 20px;
+    width: 20px;
+    position: absolute;
+    top: 7%;
+    left: 3%;
 }
 
 #BlobBlue1 {
-height: 20px;
-width: 20px;
-position: absolute;
-bottom: 4%;
-right: 3%;
+    height: 20px;
+    width: 20px;
+    position: absolute;
+    bottom: 4%;
+    right: 3%;
+}
+
+#BlobBlue2 {
+    height: 20px;
+    width: 20px;
+    position: absolute;
+    bottom: 45%;
+    right: 55%;
 }
