Map and sidepanel fill the whole screen, without overlapping
Viewports were making map overlap over sidepanel due to scrollbar.
Percentages work fill the whole screen and don't overlap.

--- a/skirmish.css
+++ b/skirmish.css
@@ -7,16 +7,21 @@ body {
 
 #sidepanel {
     min-width: 80px;
-    width: 7vw;
+    width: 7%;
     height: 120vh;
-    border-right: 1px solid #000000;
     position: absolute;
     left: 0%;
+    border-right: "1px solid #000000";
 }
 
 #map {
     height:120vh;
-    width: 93vw;
+    width: 93%;
+    max-width: calc(100% - 80px);
+    position: absolute;
+    right: 0%;
+}
+
 #Buttons {
     width: 100%;
     display: flex;
