Put all selection classes into one. Added (themed border) Building class
SelectedP1 and SelectedP2 and selection for Buildings are all Selected
now. JS checks blobs for Selected+Red classes for SelectedP1. Building
class instead of Blob class for Buildings, with their own (themed)
border.

--- a/skirmish.css
+++ b/skirmish.css
@@ -124,6 +124,12 @@ body {
     height: 80px;
 }
 
+.Building {
+    border-radius: 50%;
+    position: absolute;
+    box-sizing: content-box;
+}
+
 .Blob {
     border-radius: 50%;
     position: absolute;
@@ -240,6 +246,19 @@ body {
     border: 1.5px solid #000;
 }
 
+.LightMode .Building:hover,
+.LightMode .Building.Selected {
+    border: 1.5px solid #000;
+}
+
+.DarkMode1 .Building:hover,
+.DarkMode1 .Building.Selected {
+    border: 2px solid #000;
+}
+
+.DarkMode2 .Building:hover,
+.DarkMode2 .Building.Selected {
+    border: 2px solid #000;
 }
 /*Blobs theming end*/
 /* |||||||||||||||||||||||||||||||||| Blobs end*/
