--- a/skirmish.css
+++ b/skirmish.css
@@ -115,6 +115,17 @@ body {
     flex-grow: 1;
 }
 
+#DevModeActivate {
+    order: 8;
+    flex-grow: 1;
+}
+
+#DevModeDeactivate {
+    order: 8;
+    flex-grow: 1;
+    display: none;
+}
+
 
 /*Buttons theming begin*/
 .LightMode #DarkMode1Button {
@@ -136,6 +147,13 @@ body {
 }
 .LightMode .DarkMode1 #LightModeButton {
     display: none;
+}
+
+.DevModeOn #DevModeActivate {
+    display: none;
+}
+.DevModeOn #DevModeDeactivate {
+    display: block;
 }
 /*Buttons theming end*/
 /* |||||||||||||||||||||||||||||||||| Buttons end*/
