--- a/skirmish.css
+++ b/skirmish.css
@@ -12,7 +12,7 @@ body {
 
 /* |||||||||||||||||||||||||||||||||| Screen begin*/
 #sidepanel {
-    height: 120vh;
+    height: 120%;
     min-width: 80px;
     width: 7%;
     position: absolute;
@@ -22,7 +22,7 @@ body {
 }
 
 #map {
-    height: 120vh;
+    height: 120%;
     width: 93%;
     max-width: calc(100% - 80px);
     position: absolute;
