First 25 resources suffixed with Base. The middle BaseResource hidden
These 25 predefined resources now serve the purpose of indicating the
location for resources. They might all be hidden later. The middle
Resourcespot will probably not be used for real resources to sit in,
therefore it is hidden.

--- a/skirmish.css
+++ b/skirmish.css
@@ -370,6 +370,10 @@ body {
     left: calc(70% - 80px);
 }
 
+#ResourceA1Base,
+#ResourceB1Base {
+    visibility: hidden;
+}
 
 .Resource1 {
     top: calc(50% - 11px);
